--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "typescript": "~3.2.2"
   },
   "engines": {
-    "node": "6.11.1",
-    "npm": "3.10.9"
+    "node": "~11.0.0",
+    "npm": "~6.7.0"
   }
 }
